@@ -164,3 +164,9 @@ too little understanding of calibre...
 workaround:
 wipe "series" field manually before running the metadata source gathering process...
 
+Can't wipeout the series field... so need for noosfere DB utility for pre and postprocessing
+
+choice adjustment to code and doc to reconciliate both
+
+adaptation for changes in noosfere preventing correct detection of publish date
+(read depot legal date) 
